Fix #40, workshop vertical spacing

--- a/styles.scss
+++ b/styles.scss
@@ -1134,12 +1134,14 @@ modal {
         .workshop-list ul {
             list-style-type: decimal; 
             font-size: 12px;
+            line-height: 20px;
             padding-left: 4*$margin;
         }
         .img-wrapper { 
             width: 100%;
             height: 140px;
             padding: 12px 0;
+            margin-bottom: 40px;
             img { max-height: 120px; }
         }
         .step-circle {
